fix: navigation spacing

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -91,7 +91,7 @@ header {
 }
 
 .overlay-down {
-    top: 22%;
+    top: 20%;
     height: 0;
     width: 100%;
 }
